--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jquery": "^3.4.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
+    "react-clusterize": "^0.2.2",
     "react-dom": "^16.8.6",
     "react-fontawesome": "^1.6.1",
     "react-redux": "^7.1.0",
